--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,9 @@
 
 :root {
     --laranja-claro: #FF862A;
+    --alto contraste-fundo: #000000;
+    --alto contraste-texto: #ffffff;
+    --alto contraste-link: #ffd700;
  }
 
 body {
@@ -157,6 +160,37 @@ h2 {
 .opcoes-acessibilidade button{
     margin-bottom: 5px;
 }
+
 .apresenta-lista{
     display: none;
 }
+
+.alto contraste{
+    background-color: var(--alto-contraste-fundo);
+    color: var(--alto-contraste-texto);
+}
+
+.alto contraste header,
+.alto contraste footer,
+.alto contraste .formulario{
+    background color: color var(--alto-contraste-fundo);
+    color: var(--alto-contraste-texto);
+}
+
+.alto contraste .nav-link{
+    color: var(alto--contrasto-link);
+}
+
+.alto contraste .botao-inicio
+.alto contraste .formulario button,
+alto contraste ..btn-primary{
+    background-color: var(--alto-contraste-link);
+    color: var(--alto-contraste-fundo)
+}
+
+.alto-contraste #tropicalia {
+    background: nome;
+{
+
+.alto contraste #galeria {
+    background-color: var(--alto-contraste-fundo);
